[gd_scene load_steps=10 format=1]

[ext_resource path="res://score.gd" type="Script" id=1]
[ext_resource path="res://hijau.png" type="Texture" id=2]
[ext_resource path="res://kuning.png" type="Texture" id=3]
[ext_resource path="res://biru.png" type="Texture" id=4]
[ext_resource path="res://merah.png" type="Texture" id=5]
[ext_resource path="res://orange.png" type="Texture" id=6]
[ext_resource path="res://pink.png" type="Texture" id=7]
[ext_resource path="res://unggu.png" type="Texture" id=8]
[ext_resource path="res://new_theme.tres" type="Theme" id=9]

[node name="score" type="Node2D"]

transform/scale = Vector2( 0.5, 0.5 )
script/script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( 0, 60 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]

transform/pos = Vector2( 0, 120 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]

transform/pos = Vector2( 0, 180 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]

transform/pos = Vector2( 0, 240 )
texture = ExtResource( 6 )

[node name="Sprite6" type="Sprite" parent="."]

transform/pos = Vector2( 0, 300 )
texture = ExtResource( 7 )

[node name="Sprite7" type="Sprite" parent="."]

transform/pos = Vector2( 0, 360 )
texture = ExtResource( 8 )

[node name="font" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -102.0
margin/top = -19.0
margin/right = -62.0
margin/bottom = 21.0

[node name="Label1" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 4.0
margin/right = 84.0
margin/bottom = 34.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 64.0
margin/right = 84.0
margin/bottom = 94.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 125.0
margin/right = 84.0
margin/bottom = 155.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 184.0
margin/right = 84.0
margin/bottom = 214.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label5" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 244.0
margin/right = 84.0
margin/bottom = 274.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label6" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 304.0
margin/right = 84.0
margin/bottom = 334.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label7" type="Label" parent="font"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 20.0
margin/top = 364.0
margin/right = 84.0
margin/bottom = 394.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


